fix overflow issue

--- a/public/assignments/css/get-started.css
+++ b/public/assignments/css/get-started.css
@@ -27,6 +27,15 @@
   font-weight: 100;
   margin-bottom: 25px;
 }
+.description .get-started-headings.overflow-heading {
+  text-overflow: ellipsis;
+  width: 60%;
+  overflow: hidden;
+  white-space: nowrap;
+  height: 40px;
+  margin-bottom:20px;
+  padding-top:5px;
+}
 
 .description .sub-line {
   background: #22c1ee;
